<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/search_text"
        />
    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_text"
        />
    <EditText
        android:id="@+id/zoom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zoom_text"
        />
    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_result"
        />

</LinearLayout>